# it-helpdesk

./: LICENSE  README.md
it-helpdesk/: .gitignore  next.config.ts  package.json  package_cli.json  pnpm-lock.yaml  postcss.config.mjs  server.js
it-helpdesk/src-tauri/: Cargo.toml  tauri.conf.json
it-helpdesk/src-tauri/capabilities/: default.json
it-helpdesk/src-tauri/src/: lib.rs
it-helpdesk/src/app/: globals.css  page.tsx
it-helpdesk/src/app/admin/: admin.tsx  page.tsx
techly_adm/: next.config.ts  package.json  package_adm.json  pnpm-lock.yaml
techly_adm/src-tauri/: Cargo.toml  Cargo_adm.toml  tauri.conf.json
techly_adm/src-tauri/capabilities/: default.json
techly_adm/src-tauri/src/: lib.rs  main.rs
techly_adm/src/app/: layout.tsx  page.tsx
